# solver-gen

./: .gitignore  .gitmodules  README.md  meson.build
include/: emitter.hpp  ginac_ext.hpp  grammer.hpp  parser.hpp
samples/sample_1/: config.yml
samples/sample_1/solver-rki/: visualize.py
samples/sample_1/solver-rki/input/: initial_values.csv  parameters.csv
samples/sample_1/solver-rki/output/: result_1.csv  result_2.csv  result_3.csv  result_4.csv  result_5.csv
samples/sample_1/solver-rki/src/: config.h  device.cu
samples/sample_2/: config.yml
samples/sample_2/solver-rki/: visualize.py
samples/sample_2/solver-rki/input/: initial_values.csv  parameters.csv
samples/sample_2/solver-rki/output/: result_1.csv
samples/sample_2/solver-rki/src/: config.h  device.cu
samples/sample_3/: config.yml
samples/sample_3/solver-rki/output/: result_1.csv  result_2.csv  result_3.csv  result_4.csv  result_5.csv
samples/sample_3/solver-rki/src/: config.h  device.cu
samples/sample_4/: config.yml
samples/sample_4/solver-rki/input/: initial_values.csv  parameters.csv
samples/sample_4/solver-rki/src/: config.h  device.cu  host.cu
src/: main.cpp
